[package]
name = "yinzhe9"
version = "0.1.0"
edition = "2021"
authors = ["禾风原 <fengyuan_he@163.com>"]
homepage = "https://yinzhe9.github.io"
repository = "https://github.com/yinzhe9/yinzhe9"
license = "MIT OR Apache-2.0"
description = "喵喵隐者9"

[dependencies]
rmw-utf8 = "0.0.6"
rand = "0.9.0-alpha.1"